--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
                     <configuration>
                         <archive>
                             <addMavenDescriptor>false</addMavenDescriptor>
+                            <manifest>
+                                <mainClass>org.widgetrefinery.util.crypto.CryptoHashCli</mainClass>
+                            </manifest>
                         </archive>
                     </configuration>
                 </plugin>
