CLParser.getHelpMessage() now automatically wraps text at 80 characters, also tries to figure out the jar name

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
                         <archive>
                             <addMavenDescriptor>false</addMavenDescriptor>
                             <manifest>
-                                <mainClass>org.widgetrefinery.util.crypto.CryptoHashCli</mainClass>
+                                <mainClass>org.widgetrefinery.util.crypto.Cli</mainClass>
                             </manifest>
                         </archive>
                     </configuration>
