--- a/refinery-tools/pom.xml
+++ b/refinery-tools/pom.xml
@@ -6,15 +6,19 @@
     <artifactId>refinery-tools</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <organization>
+        <name>${project.groupId}</name>
+    </organization>
     <properties>
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
+        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ssZ</maven.build.timestamp.format>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <build>
         <resources>
             <resource>
-                <directory>.</directory>
+                <directory>..</directory>
                 <includes>
                     <include>COPYING</include>
                 </includes>
@@ -29,8 +33,13 @@
                         <archive>
                             <addMavenDescriptor>false</addMavenDescriptor>
                             <manifest>
+                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                                 <mainClass>org.widgetrefinery.util.crypto.Cli</mainClass>
                             </manifest>
+                            <manifestEntries>
+                                <Built-By>${project.groupId}</Built-By>
+                                <Build-Date>${maven.build.timestamp}</Build-Date>
+                            </manifestEntries>
                         </archive>
                     </configuration>
                 </plugin>
