--- a/refinery-tools/pom.xml
+++ b/refinery-tools/pom.xml
@@ -2,19 +2,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.widgetrefinery</groupId>
+    <parent>
+        <groupId>org.widgetrefinery</groupId>
+        <artifactId>refinery-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <artifactId>refinery-tools</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <organization>
-        <name>${project.groupId}</name>
-    </organization>
-    <properties>
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
-        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ssZ</maven.build.timestamp.format>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
     <build>
         <resources>
             <resource>
@@ -31,15 +25,9 @@
                     <artifactId>maven-jar-plugin</artifactId>
                     <configuration>
                         <archive>
-                            <addMavenDescriptor>false</addMavenDescriptor>
                             <manifest>
-                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                                 <mainClass>org.widgetrefinery.util.crypto.Cli</mainClass>
                             </manifest>
-                            <manifestEntries>
-                                <Built-By>${project.groupId}</Built-By>
-                                <Build-Date>${maven.build.timestamp}</Build-Date>
-                            </manifestEntries>
                         </archive>
                     </configuration>
                 </plugin>
@@ -50,14 +38,10 @@
         <dependency>
             <groupId>org.jmock</groupId>
             <artifactId>jmock</artifactId>
-            <version>2.5.1</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.10</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
