turning off attach property in assembly plugin to reduce the warnings maven produce

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
                     <configuration>
                         <finalName>${project.artifactId}</finalName>
                         <appendAssemblyId>false</appendAssemblyId>
+                        <attach>false</attach>
                     </configuration>
                 </plugin>
             </plugins>
