introducing translator; breaking out crypto utility into a separate module

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <modules>
+        <module>crypto-tools</module>
         <module>refinery-tools</module>
     </modules>
     <build>
