--- a/refinery-tools/src/test/resources/example_translate_test_cl_description.properties
+++ b/refinery-tools/src/test/resources/example_translate_test_cl_description.properties
@@ -1,1 +1,1 @@
-cl.help.description: DESCRIPTION:\n\tcustom\n\tapplication\n\t\tdescription
+cl.help.description: DESCRIPTION:\n\tCustom\n\tApplication\n\t\tDescription
