improve word-wrapping logic to handle words that are too long to fit on a single line

--- a/crypto-tools/src/main/resources/translate.properties
+++ b/crypto-tools/src/main/resources/translate.properties
@@ -7,3 +7,5 @@ cl.error.switch_missing_value: missing value for argument {0}
 cl.error.unexpected_switch_value: unexpected value for argument {0} ({1})
 cl.error.bad_switch_value: invalid value for {0} ({1})
 cl.error.missing_license: License file not found. This should have displayed the GPLv3 license.
+
+config.cl.width: 80
