--- a/refinery-tools/src/test/resources/translate.properties
+++ b/refinery-tools/src/test/resources/translate.properties
@@ -7,3 +7,5 @@ cl.error.switch_missing_value: missing value for argument {0}
 cl.error.unexpected_switch_value: unexpected value for argument {0} ({1})
 cl.error.bad_switch_value: invalid value for {0} ({1})
 cl.error.missing_license: License file not found. This should have displayed the GPLv3 license.
+
+config.cl.width: 80
